--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+<script src="script.js" defer></script>
 
  
   <!-- 🔒 Security: Prevent iframe embedding (clickjacking protection) -->
