--- a/index.html
+++ b/index.html
@@ -1,321 +1,111 @@
-document.addEventListener('DOMContentLoaded', () => {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Policy Debate Timer</title>
 
-// ====== RESPONSIBILITIES DATA ======
-const detailedResponsibilities = {
-  "1st Affirmative": {
-    "1AC": {
-      "core": "Present the affirmative case: resolution, harms, inherency, solvency, and plan.",
-      "style": "Use persuasive tone, emphasize clarity, and signpost structure (e.g., 'First, the Harms...').",
-      "mistakes": "Avoid reading too quickly; practice a strong opening."
-    }
-  },
-  "2nd Affirmative": {
-    "2AC": {
-      "core": "Answer 1NC arguments; extend 1AC case; rebuild aff offense.",
-      "style": "Sound confident; don't rush; collapse to strong aff positions.",
-      "mistakes": "Don’t drop key 1NC arguments; clarify what you're winning."
-    }
-  },
-  "1st Negative": {
-    "1NC": {
-      "core": "Introduce off-case (disads, CPs, topicality); refute 1AC on-case points.",
-      "style": "Label and group arguments clearly. Prioritize important issues.",
-      "mistakes": "Don’t forget to answer all 1AC points; avoid jargon overload."
-    }
-  },
-  "2nd Negative": {
-    "2NC": {
-      "core": "Split the block; extend off-case arguments; deepen strategic attacks.",
-      "style": "Organize by argument; prep with 1NR; stay composed.",
-      "mistakes": "Avoid overlap with 1NR; be sure to extend impacts."
-    }
-  },
-  "Judge": {
-    "1AC": {
-      "core": "Judge watches and flows the round.",
-      "style": "Remain objective. Listen for clash, logic, and clarity.",
-      "mistakes": "Avoid distractions or bias."
-    }
-  }
-};
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-// ====== TIMER VARIABLES ======
-let speechTimer;
-let speechTimeLeft = 300;
-let isSpeechRunning = false;
+  <!-- 🔒 Security: Prevent iframe embedding (clickjacking protection) -->
+  <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
+</head>
+<body class="bg-gray-900 text-white font-sans p-4 min-h-screen">
 
-let prepTimer;
-let prepTimeLeft = 300;
-let isPrepRunning = false;
+  <!-- 🔠 Accessible Page Heading -->
+  <h1 class="text-center text-3xl font-bold mb-6" role="heading" aria-level="1">Policy Debate Timer</h1>
 
-let userRole = '';
-let userLevel = '';
-let speechTimes = {};
+  <!-- 🎤 Speech Buttons -->
+  <div class="grid grid-cols-4 gap-2 mb-6" role="group" aria-label="Speech Selection Buttons">
+    <button class="bg-blue-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start 1AC Speech (5 minutes)">1AC (5m)</button>
+    <button class="bg-purple-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start CX1 Cross Examination (3 minutes)">CX1 (3m)</button>
+    <button class="bg-blue-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start 1NC Speech (5 minutes)">1NC (5m)</button>
+    <button class="bg-purple-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start CX2 Cross Examination (3 minutes)">CX2 (3m)</button>
 
-// ====== TIME PRESETS ======
-const timePresets = {
-  middle: {
-    speechTimes: {
-      '1AC': 300, '1NC': 300, '2AC': 300, '2NC': 300,
-      '1NR': 180, '1AR': 180, '2NR': 180, '2AR': 180,
-      'CX1': 180, 'CX2': 180, 'CX3': 180, 'CX4': 180
-    },
-    prepTime: 300
-  },
-  high: {
-    speechTimes: {
-      '1AC': 480, '1NC': 480, '2AC': 480, '2NC': 480,
-      '1NR': 300, '1AR': 300, '2NR': 300, '2AR': 300,
-      'CX1': 180, 'CX2': 180, 'CX3': 180, 'CX4': 180
-    },
-    prepTime: 480
-  }
-};
+    <button class="bg-blue-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start 2AC Speech (5 minutes)">2AC (5m)</button>
+    <button class="bg-purple-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start CX3 Cross Examination (3 minutes)">CX3 (3m)</button>
+    <button class="bg-blue-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start 2NC Speech (5 minutes)">2NC (5m)</button>
+    <button class="bg-purple-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start CX4 Cross Examination (3 minutes)">CX4 (3m)</button>
 
-// ====== DOM ELEMENTS ======
-const mainTimer = document.getElementById('main-timer');
-const speechProgress = document.getElementById('speech-progress');
-const startBtn = document.getElementById('start-btn');
-const resetBtn = document.getElementById('reset-btn');
-const prepTimerDisplay = document.getElementById('prep-timer');
-const prepProgress = document.getElementById('prep-progress');
-const prepRemaining = document.getElementById('prep-remaining');
-const startPrepBtn = document.getElementById('start-prep-btn');
-const resetPrepBtn = document.getElementById('reset-prep-btn');
+    <button class="bg-blue-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start 1NR Speech (3 minutes)">1NR (3m)</button>
+    <button class="bg-blue-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start 1AR Speech (3 minutes)">1AR (3m)</button>
+    <button class="bg-blue-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start 2NR Speech (3 minutes)">2NR (3m)</button>
+    <button class="bg-blue-600 text-white py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start 2AR Speech (3 minutes)">2AR (3m)</button>
+  </div>
 
-// ====== UTILITIES ======
-function formatTime(seconds) {
-  const mins = Math.floor(seconds / 60);
-  const secs = seconds % 60;
-  return `${mins}:${secs.toString().padStart(2, '0')}`;
-}
+  <!-- 🕒 Main Speech Timer -->
+  <div class="text-center mb-6">
+    <p class="text-lg mb-2">Select a speech to begin</p>
+    <div id="speechTimerContainer" class="bg-gray-800 p-4 rounded-lg" role="region" aria-label="Speech Timer">
+      <h2 id="main-timer" class="text-6xl font-bold mb-4" aria-live="polite">5:00</h2>
+      <input type="range" min="0" max="300" value="300" id="speech-progress" class="w-full accent-green-500 mb-4" aria-label="Adjust speech timer">
+      <div class="flex justify-center gap-4">
+        <button id="start-btn" class="bg-green-600 px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start or Pause Speech Timer">Start</button>
+        <button id="reset-btn" class="bg-red-600 px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Reset Speech Timer">Reset</button>
+      </div>
+    </div>
+  </div>
 
-// ====== SPEECH TIMER FUNCTIONS ======
-function updateSpeechDisplay() {
-  mainTimer.textContent = formatTime(speechTimeLeft);
-  speechProgress.value = speechTimeLeft;
-  speechProgress.max = speechTimeLeft;
-}
+  <!-- ⏳ Prep Timer -->
+  <div id="prepTimerContainer" class="bg-gray-800 p-4 rounded-lg" role="region" aria-label="Prep Time Timer">
+    <p class="mb-1">Prep Time (<span id="prep-remaining">5:00</span> remaining)</p>
+    <h2 id="prep-timer" class="text-3xl font-bold mb-4" aria-live="polite">5:00</h2>
+    <input type="range" min="0" max="300" value="300" id="prep-progress" class="w-full accent-blue-600 mb-4" aria-label="Adjust prep timer">
+    <div class="flex justify-center gap-4">
+      <button id="start-prep-btn" class="bg-blue-600 px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Start or Pause Prep Timer">Start Prep</button>
+      <button id="reset-prep-btn" class="bg-red-600 px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-white" aria-label="Reset Prep Timer">Reset Prep</button>
+    </div>
+  </div>
 
-function startSpeechTimer() {
-  if (isSpeechRunning) return;
-  isSpeechRunning = true;
-  startBtn.textContent = 'Pause';
+  <!-- 📋 Responsibilities Panel -->
+  <button id="responsibilities-toggle"
+          class="fixed top-4 right-4 bg-gray-700 px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-white"
+          aria-expanded="false"
+          aria-controls="responsibilities-panel">
+    Responsibilities
+  </button>
 
-  speechTimer = setInterval(() => {
-    if (speechTimeLeft <= 0) {
-      clearInterval(speechTimer);
-      isSpeechRunning = false;
-      mainTimer.textContent = '0:00';
-      document.getElementById('speechTimerContainer').classList.add('bg-red-600');
-      new Audio('https://actions.google.com/sounds/v1/alarms/beep_short.ogg').play();
-      return;
-    }
-    speechTimeLeft--;
-    updateSpeechDisplay();
-  }, 1000);
-}
+  <div id="responsibilities-panel"
+       class="fixed top-0 right-0 w-2/3 sm:w-1/3 h-full bg-gray-800 text-white p-4 shadow-lg transform translate-x-full transition-transform duration-300 overflow-y-auto z-40"
+       role="complementary"
+       aria-hidden="true">
+    <h3 class="text-xl font-bold mb-4" role="heading" aria-level="2">Speech Responsibilities</h3>
+    <ul id="responsibilities-list" class="list-disc list-inside space-y-2">
+      <li>Choose a speech to load responsibilities.</li>
+    </ul>
+  </div>
 
-function pauseSpeechTimer() {
-  isSpeechRunning = false;
-  startBtn.textContent = 'Start';
-  clearInterval(speechTimer);
-}
+  <!-- 🌟 Role & Level Setup Modal -->
+  <div id="setup-modal" class="fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center z-50">
+    <div class="bg-gray-800 p-6 rounded shadow-lg text-white w-11/12 max-w-md space-y-4">
+      <h2 class="text-xl font-bold">Welcome! Set Your Role</h2>
+      
+      <label class="block">Select Your Role:
+        <select id="role-select" class="w-full mt-1 p-2 rounded text-black">
+          <option value="1A">1st Affirmative</option>
+          <option value="2A">2nd Affirmative</option>
+          <option value="1N">1st Negative</option>
+          <option value="2N">2nd Negative</option>
+          <option value="Judge">Judge</option>
+        </select>
+      </label>
 
-// ====== PREP TIMER FUNCTIONS ======
-function updatePrepDisplay() {
-  prepTimerDisplay.textContent = formatTime(prepTimeLeft);
-  prepRemaining.textContent = formatTime(prepTimeLeft);
-  prepProgress.value = prepTimeLeft;
-  prepProgress.max = prepTimeLeft;
-}
+      <label class="block">Select Your Division:
+        <select id="level-select" class="w-full mt-1 p-2 rounded text-black">
+          <option value="middle">Middle School</option>
+          <option value="high">High School</option>
+        </select>
+      </label>
 
-function startPrepTimer() {
-  if (isPrepRunning) return;
-  isPrepRunning = true;
-  startPrepBtn.textContent = 'Pause Prep';
+      <button id="setup-confirm"
+              class="bg-green-600 px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-white w-full">
+        Start Debate Timer
+      </button>
+    </div>
+  </div>
 
-  prepTimer = setInterval(() => {
-    if (prepTimeLeft <= 0) {
-      clearInterval(prepTimer);
-      isPrepRunning = false;
-      return;
-    }
-
-    prepTimeLeft--;
-
-    if (prepTimeLeft % 60 === 59) {
-      const used = timePresets[userLevel].prepTime - prepTimeLeft;
-      showPrepUsedToast(`${Math.floor(used / 60)} minute${used >= 120 ? 's' : ''} of prep used`);
-    }
-
-    updatePrepDisplay();
-  }, 1000);
-}
-
-function pausePrepTimer() {
-  isPrepRunning = false;
-  startPrepBtn.textContent = 'Start Prep';
-  clearInterval(prepTimer);
-}
-
-function showPrepUsedToast(message) {
-  const toast = document.createElement('div');
-  toast.textContent = message;
-  toast.className = 'fixed bottom-4 left-1/2 transform -translate-x-1/2 bg-blue-600 text-white px-4 py-2 rounded shadow-lg z-50';
-  document.body.appendChild(toast);
-  setTimeout(() => toast.remove(), 2000);
-}
-
-// ====== RESPONSIBILITIES FUNCTION ======
-function updateResponsibilities(currentSpeechLabel) {
-  const roleNameMap = {
-    "1A": "1st Affirmative",
-    "2A": "2nd Affirmative",
-    "1N": "1st Negative",
-    "2N": "2nd Negative",
-    "Judge": "Judge"
-  };
-
-  const userFriendlyRole = roleNameMap[userRole];
-  const roleData = detailedResponsibilities[userFriendlyRole];
-  const speechData = roleData?.[currentSpeechLabel];
-  const listEl = document.getElementById('responsibilities-list');
-  listEl.innerHTML = '';
-
-  const addCategory = (title, content) => {
-    const heading = document.createElement('h4');
-    heading.className = 'font-bold mt-4';
-    heading.textContent = title;
-    listEl.appendChild(heading);
-
-    const item = document.createElement('li');
-    item.textContent = content;
-    listEl.appendChild(item);
-  };
-
-  if (speechData) {
-    addCategory('Core Responsibilities', speechData.core);
-    addCategory('Style & Strategy Tips', speechData.style);
-    addCategory('Reminders & Common Mistakes', speechData.mistakes);
-  } else {
-    const tip = (userRole === 'Judge')
-      ? "Listen carefully; take notes on clarity, clash, and credibility."
-      : `Be sure to flow and prepare responses to ${currentSpeechLabel}.`;
-    listEl.innerHTML = `<li>${tip}</li>`;
-  }
-}
-
-// ====== EVENT LISTENERS ======
-document.querySelectorAll('.grid button').forEach(button => {
-  button.addEventListener('click', () => {
-    const label = button.textContent.split(' ')[0];
-    const time = speechTimes[label];
-
-    if (!time) {
-      alert("Please click 'Start Debate Timer' first.");
-      return;
-    }
-
-    if (isPrepRunning) {
-      const confirmSwitch = window.confirm("Prep time is running. Pause and start speech?");
-      if (!confirmSwitch) return;
-      pausePrepTimer();
-    }
-
-    if (isSpeechRunning) {
-      const confirmReset = window.confirm("Speech is running. Switch speeches?");
-      if (!confirmReset) return;
-    }
-
-    pauseSpeechTimer();
-    speechTimeLeft = time;
-    updateSpeechDisplay();
-    document.getElementById('speechTimerContainer').classList.remove('bg-red-600');
-    startSpeechTimer();
-    updateResponsibilities(label);
-  });
-});
-
-startBtn.addEventListener('click', () => {
-  isSpeechRunning ? pauseSpeechTimer() : startSpeechTimer();
-});
-
-resetBtn.addEventListener('click', () => {
-  pauseSpeechTimer();
-  speechTimeLeft = 300;
-  updateSpeechDisplay();
-  document.getElementById('speechTimerContainer').classList.remove('bg-red-600');
-});
-
-speechProgress.addEventListener('input', e => {
-  speechTimeLeft = parseInt(e.target.value);
-  updateSpeechDisplay();
-});
-
-startPrepBtn.addEventListener('click', () => {
-  if (!isPrepRunning && isSpeechRunning) {
-    const confirmStartPrep = window.confirm("A speech is running. Use prep instead?");
-    if (!confirmStartPrep) return;
-    pauseSpeechTimer();
-  }
-
-  isPrepRunning ? pausePrepTimer() : startPrepTimer();
-});
-
-resetPrepBtn.addEventListener('click', () => {
-  pausePrepTimer();
-  prepTimeLeft = timePresets[userLevel].prepTime;
-  updatePrepDisplay();
-});
-
-prepProgress.addEventListener('input', e => {
-  prepTimeLeft = parseInt(e.target.value);
-  updatePrepDisplay();
-});
-
-// ====== MODAL SETUP CONFIRMATION ======
-document.getElementById('setup-confirm').addEventListener('click', () => {
-  userRole = document.getElementById('role-select').value;
-  userLevel = document.getElementById('level-select').value;
-
-  speechTimes = timePresets[userLevel].speechTimes;
-  prepTimeLeft = timePresets[userLevel].prepTime;
-
-  document.getElementById('setup-modal').style.display = 'none';
-
-  updateSpeechDisplay();
-  updatePrepDisplay();
-});
-
-// ====== RESPONSIBILITIES TOGGLE ======
-document.getElementById('responsibilities-toggle').addEventListener('click', e => {
-  e.stopPropagation();
-  document.getElementById('responsibilities-panel').classList.toggle('translate-x-full');
-});
-
-document.addEventListener('click', e => {
-  const panel = document.getElementById('responsibilities-panel');
-  const toggle = document.getElementById('responsibilities-toggle');
-  if (!panel.contains(e.target) && !toggle.contains(e.target)) {
-    panel.classList.add('translate-x-full');
-  }
-});
-
-// ====== INIT ======
-updateSpeechDisplay();
-updatePrepDisplay();
-
-});
-document.getElementById('responsibilities-toggle').addEventListener('click', e => {
-  e.stopPropagation();
-  document.getElementById('responsibilities-panel').classList.toggle('translate-x-full');
-});
-
-document.addEventListener('click', e => {
-  const panel = document.getElementById('responsibilities-panel');
-  const toggle = document.getElementById('responsibilities-toggle');
-  if (!panel.contains(e.target) && !toggle.contains(e.target)) {
-    panel.classList.add('translate-x-full');
-  }
-});
+  <!-- 👨‍💻 Main Script -->
+  <script src="script.js"></script>
+</body>
+</html>
