--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="bg-slate-900">
 <head>
@@ -88,5 +89,6 @@
   <!-- Alarm Audio -->
   <audio id="alarm-audio" src="assets/alarm.mp3" preload="auto"></audio>
   <script src="script.js"></script>
+<script src="script.js?v=1.1"></script>
 </body>
 </html>
