--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="bg-slate-900">
 <head>
@@ -21,13 +22,13 @@
   <div id="setup-modal" class="bg-gray-800 text-white fixed z-50 rounded-lg shadow-lg p-8 max-w-md w-full top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
     <h2 class="text-xl font-bold mb-4">Setup</h2>
     <label for="level-select" class="block font-semibold mb-1">Select Your Division</label>
-    <select id="level-select" class="w-full mb-4 border rounded px-2 py-1">
+<select id="level-select" class="w-full mb-4 border rounded px-2 py-1 text-black">
       <option value="">Choose...</option>
       <option value="middle">Middle School</option>
       <option value="high">High School</option>
     </select>
     <label for="role-select" class="block font-semibold mb-1">Select Your Role</label>
-    <select id="role-select" class="w-full mb-6 border rounded px-2 py-1">
+<select id="role-select" class="w-full mb-6 border rounded px-2 py-1 text-black">
       <option value="">Choose...</option>
       <option value="1A">1st Affirmative</option>
       <option value="2A">2nd Affirmative</option>
