--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en" class="bg-slate-900">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Policy Debate Timer</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
-  html, body {
-    height: 100%;
-    background-color: #101827; /* fallback for bg-slate-900 */
-  }
-</style>
-
+    html, body {
+      height: 100%;
+      background-color: #101827; /* fallback for bg-slate-900 */
+    }
+  </style>
 </head>
 
 <body class="min-h-screen flex flex-col items-center justify-center text-white">
 
-
   <!-- Setup Modal -->
   <div id="modal-backdrop" class="fixed inset-0 bg-black bg-opacity-40 z-40"></div>
-  <div id="setup-modal" class="bg-gray-800 text-white fixed z-50 rounded-lg shadow-lg p-8 max-w-md w-full top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+  <div id="setup-modal" class="bg-gray-800 text-white fixed z-50 rounded-lg shadow-lg p-6 sm:p-8 max-w-md w-full mx-4 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
     <h2 class="text-xl font-bold mb-4">Setup</h2>
     <label for="level-select" class="block font-semibold mb-1">Select Your Division</label>
-<select id="level-select" class="w-full mb-4 border rounded px-2 py-1 text-black">
+    <select id="level-select" class="w-full mb-4 border rounded px-2 py-1 text-black">
       <option value="">Choose...</option>
       <option value="middle">Middle School</option>
       <option value="high">High School</option>
     </select>
     <label for="role-select" class="block font-semibold mb-1">Select Your Role</label>
-<select id="role-select" class="w-full mb-6 border rounded px-2 py-1 text-black">
+    <select id="role-select" class="w-full mb-6 border rounded px-2 py-1 text-black">
       <option value="">Choose...</option>
       <option value="1A">1st Affirmative</option>
       <option value="2A">2nd Affirmative</option>
@@ -40,10 +38,9 @@
   </div>
 
   <!-- Main Timer Section -->
-  <div id="speechTimerContainer" class="bg-gray-800 rounded-lg shadow-lg p-8 mt-8 flex flex-col items-center">
+  <div id="speechTimerContainer" class="bg-gray-800 rounded-lg shadow-lg p-6 sm:p-8 mt-8 flex flex-col items-center w-full max-w-md mx-4">
     <div class="flex items-center space-x-4 mb-4">
-      <span id="main-timer" contenteditable="true" class="text-6xl font-mono text-white transition-colors duration-200 outline-none focus:ring-2 ring-blue-400 rounded px-2" aria-label="Edit Speech Timer" title="Click to edit time">5:00</span>
-
+      <span id="main-timer" contenteditable="true" class="text-4xl sm:text-6xl font-mono text-white transition-colors duration-200 outline-none focus:ring-2 ring-blue-400 rounded px-2" aria-label="Edit Speech Timer" title="Click to edit time">5:00</span>
     </div>
     <div class="flex space-x-4 mt-4">
       <button id="start-btn" class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-6 rounded">Start 1AC</button>
@@ -52,26 +49,25 @@
   </div>
 
   <!-- Speech Buttons -->
-  <div class="grid grid-cols-4 gap-2 mt-8 w-full max-w-2xl">
-    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold" data-label="1AC">1AC</button>
-    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold" data-label="CX1">CX1</button>
-    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold" data-label="2AC">2AC</button>
-    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold" data-label="CX2">CX2</button>
-    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold" data-label="1NC">1NC</button>
-    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold" data-label="CX3">CX3</button>
-    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold" data-label="2NC">2NC</button>
-    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold" data-label="CX4">CX4</button>
-    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold" data-label="1NR">1NR</button>
-    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold" data-label="1AR">1AR</button>
-    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold" data-label="2NR">2NR</button>
-    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold" data-label="2AR">2AR</button>
+  <div class="grid grid-cols-2 sm:grid-cols-4 gap-2 mt-8 w-full max-w-2xl px-4">
+    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AC">1AC</button>
+    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX1">CX1</button>
+    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AC">2AC</button>
+    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX2">CX2</button>
+    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NC">1NC</button>
+    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX3">CX3</button>
+    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NC">2NC</button>
+    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX4">CX4</button>
+    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NR">1NR</button>
+    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AR">1AR</button>
+    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NR">2NR</button>
+    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AR">2AR</button>
   </div>
 
   <!-- Prep Timer Section -->
-  <div class="bg-gray-800 rounded-lg shadow-lg p-6 mt-8 flex flex-col items-center">
+  <div class="bg-gray-800 rounded-lg shadow-lg p-6 mt-8 flex flex-col items-center w-full max-w-md mx-4">
     <div class="flex items-center space-x-4 mb-4">
-      <span id="prep-timer" contenteditable="true" class="text-3xl font-mono text-white outline-none focus:ring-2 ring-yellow-400 rounded px-2" aria-label="Edit Prep Timer" title="Click to edit time">5:00</span>
-
+      <span id="prep-timer" contenteditable="true" class="text-xl sm:text-3xl font-mono text-white outline-none focus:ring-2 ring-yellow-400 rounded px-2" aria-label="Edit Prep Timer" title="Click to edit time">5:00</span>
     </div>
     <div class="flex space-x-4">
       <button id="start-prep-btn" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-6 rounded">Start Prep</button>
@@ -81,7 +77,7 @@
 
   <!-- Responsibilities Panel -->
   <button id="responsibilities-toggle" class="fixed top-4 right-4 bg-blue-600 text-white px-4 py-2 rounded shadow z-50">Responsibilities</button>
-  <div id="responsibilities-panel" class="fixed top-0 right-0 w-80 h-full bg-gray-800 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
+  <div id="responsibilities-panel" class="fixed top-0 right-0 w-full sm:w-80 h-full bg-gray-800 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
     <div class="p-6">
       <h3 class="text-lg font-bold mb-4">Responsibilities</h3>
       <ul id="responsibilities-list" class="list-disc pl-5"></ul>
@@ -90,6 +86,6 @@
 
   <!-- Alarm Audio -->
   <audio id="alarm-audio" src="assets/alarm.mp3" preload="auto"></audio>
-<script src="script.js?v=1.2"></script>
+  <script src="script.js?v=1.2"></script>
 </body>
 </html>
