--- a/index.html
+++ b/index.html
@@ -78,11 +78,14 @@
   <!-- Responsibilities Panel -->
   <button id="responsibilities-toggle" class="fixed top-4 right-4 bg-blue-600 text-white px-4 py-2 rounded shadow z-50">Responsibilities</button>
   <div id="responsibilities-panel" class="fixed top-0 right-0 w-full sm:w-80 h-full bg-gray-800 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
-    <div class="p-6">
-      <h3 class="text-lg font-bold mb-4">Responsibilities</h3>
-      <ul id="responsibilities-list" class="list-disc pl-5"></ul>
-    </div>
-  </div>
+    <div class="p-6 relative">
+  <button id="close-responsibilities" aria-label="Close Responsibilities Panel"
+    class="absolute top-0 right-0 mt-2 mr-2 text-white text-xl font-bold focus:outline-none">&times;</button>
+  <h3 class="text-lg font-bold mb-4 mt-2">Responsibilities</h3>
+  <ul id="responsibilities-list" class="list-disc pl-5"></ul>
+</div>
+
+
 
   <!-- Alarm Audio -->
   <audio id="alarm-audio" src="assets/alarm.mp3" preload="auto"></audio>
