--- a/index.html
+++ b/index.html
@@ -67,10 +67,13 @@
     <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX3">CX3</button>
     <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NC">2NC</button>
     <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX4">CX4</button>
-    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NR">1NR</button>
-    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AR">1AR</button>
-    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NR">2NR</button>
-    <button class="speech-btn bg-sky-600 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AR">2AR</button>
+    
+<button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NR">1NR</button>
+<button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AR">1AR</button>
+<button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NR">2NR</button>
+<button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AR">2AR</button>
+
+
   </div>
 
   <!-- Prep Timer Section -->
