--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <title>Policy Debate Timer</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
+.speech-btn.active {
+  box-shadow: 0 0 0 3px #22d3ee; /* cyan-400 ring */
+  transition: box-shadow 0.3s ease;
+}
+
     html, body {
       height: 100%;
       background-color: #101827; /* fallback for bg-slate-900 */
