--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
   <!-- Alarm Audio -->
   <audio id="alarm-audio" src="assets/alarm.mp3" preload="auto"></audio>
-  <script src="script.js?v=1.2"></script>
+  <script src="script.js"></script>
+
 </body>
 </html>
