--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" class="bg-slate-900">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-C9RXW8KVS3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-C9RXW8KVS3');
-</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Policy Debate Timer</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
-.speech-btn.active {
-  box-shadow: 0 0 0 3px #22d3ee; /* cyan-400 ring */
-  transition: box-shadow 0.3s ease;
-}
-
+    .speech-btn.active {
+      box-shadow: 0 0 0 3px #22d3ee;
+      transition: box-shadow 0.3s ease;
+    }
     html, body {
       height: 100%;
-      background-color: #101827; /* fallback for bg-slate-900 */
+      background-color: #101827;
     }
   </style>
 </head>
@@ -66,19 +56,16 @@
   <div class="grid grid-cols-2 sm:grid-cols-4 gap-2 mt-8 w-full max-w-2xl px-4">
     <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AC">1AC</button>
     <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX1">CX1</button>
-    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AC">2AC</button>
-    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX2">CX2</button>
     <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NC">1NC</button>
+    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX2">CX2</button>
+    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AC">2AC</button>
     <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX3">CX3</button>
     <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NC">2NC</button>
     <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX4">CX4</button>
-    
-<button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NR">1NR</button>
-<button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AR">1AR</button>
-<button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NR">2NR</button>
-<button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AR">2AR</button>
-
-
+    <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NR">1NR</button>
+    <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AR">1AR</button>
+    <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NR">2NR</button>
+    <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AR">2AR</button>
   </div>
 
   <!-- Prep Timer Section -->
@@ -96,17 +83,14 @@
   <button id="responsibilities-toggle" class="fixed top-4 right-4 bg-blue-600 text-white px-4 py-2 rounded shadow z-50">Responsibilities</button>
   <div id="responsibilities-panel" class="fixed top-0 right-0 w-full sm:w-80 h-full bg-gray-800 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
     <div class="p-6 relative">
-  <button id="close-responsibilities" aria-label="Close Responsibilities Panel"
-    class="absolute top-0 right-0 mt-2 mr-2 text-white text-xl font-bold focus:outline-none">&times;</button>
-  <h3 class="text-lg font-bold mb-4 mt-2">Responsibilities</h3>
-  <ul id="responsibilities-list" class="list-disc pl-5"></ul>
-</div>
-
-
+      <button id="close-responsibilities" aria-label="Close Responsibilities Panel" class="absolute top-0 right-0 mt-2 mr-2 text-white text-xl font-bold focus:outline-none">&times;</button>
+      <h3 class="text-lg font-bold mb-4 mt-2">Responsibilities</h3>
+      <ul id="responsibilities-list" class="list-disc pl-5"></ul>
+    </div>
+  </div>
 
   <!-- Alarm Audio -->
   <audio id="alarm-audio" src="assets/alarm.mp3" preload="auto"></audio>
   <script src="script.js"></script>
-
 </body>
 </html>
