--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- Setup Modal -->
   <div id="modal-backdrop" class="fixed inset-0 bg-black bg-opacity-40 z-40"></div>
   <div id="setup-modal" class="bg-gray-800 text-white fixed z-50 rounded-lg shadow-lg p-6 sm:p-8 max-w-md w-full mx-4 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+    <button id="setup-close" aria-label="Close Setup Modal" class="absolute top-0 right-0 mt-2 mr-2 text-white text-xl font-bold focus:outline-none">&times;</button>
     <h2 class="text-xl font-bold mb-4">Setup</h2>
     <label for="level-select" class="block font-semibold mb-1">Select Your Division</label>
     <select id="level-select" class="w-full mb-4 border rounded px-2 py-1 text-black">
