--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
   <!-- Alarm Audio -->
   <audio id="alarm-audio" src="assets/alarm.mp3" preload="auto"></audio>
+  <script src="responsibilities.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
