--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
   <!-- Speech Buttons -->
   <div class="grid grid-cols-2 sm:grid-cols-4 gap-2 mt-8 w-full max-w-2xl px-4">
+    <!-- "line-through" class will be added dynamically via JS on completed speeches -->
     <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AC">1AC</button>
     <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX1">CX1</button>
     <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NC">1NC</button>
