--- a/index.html
+++ b/index.html
@@ -42,20 +42,18 @@
     <button id="setup-confirm" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 rounded">Start Debate</button>
   </div>
 
-  <!-- Main Timer Section -->
-  <div id="speechTimerContainer" class="bg-gray-800 rounded-lg shadow-lg p-6 sm:p-8 mt-8 flex flex-col items-center w-full max-w-md mx-4">
-    <div class="flex items-center space-x-4 mb-4">
-      <span id="main-timer" contenteditable="true" class="text-4xl sm:text-6xl font-mono text-white transition-colors duration-200 outline-none focus:ring-2 ring-blue-400 rounded px-2" aria-label="Edit Speech Timer" title="Click to edit time">5:00</span>
-    </div>
-    <div class="flex space-x-4 mt-4">
-      <button id="start-btn" class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-6 rounded">Start 1AC</button>
-      <button id="reset-btn" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-6 rounded">Reset</button>
+  <!-- Responsibilities Panel -->
+  <button id="responsibilities-toggle" class="fixed top-4 right-4 bg-blue-600 text-white px-4 py-2 rounded shadow z-50">Coach Tips</button>
+  <div id="responsibilities-panel" class="fixed top-0 right-0 w-full sm:w-80 h-full bg-gray-800 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
+    <div class="p-6 relative">
+      <button id="close-responsibilities" aria-label="Close Responsibilities Panel" class="absolute top-0 right-0 mt-2 mr-2 text-white text-xl font-bold focus:outline-none">&times;</button>
+      <h3 class="text-lg font-bold mb-4 mt-2">Coach Tips</h3>
+      <ul id="responsibilities-list" class="list-disc pl-5"></ul>
     </div>
   </div>
 
   <!-- Speech Buttons -->
   <div class="grid grid-cols-2 sm:grid-cols-4 gap-2 mt-8 w-full max-w-2xl px-4">
-    <!-- "line-through" class will be added dynamically via JS on completed speeches -->
     <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AC">1AC</button>
     <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX1">CX1</button>
     <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NC">1NC</button>
@@ -70,6 +68,17 @@
     <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AR">2AR</button>
   </div>
 
+  <!-- Main Timer Section -->
+  <div id="speechTimerContainer" class="bg-gray-800 rounded-lg shadow-lg p-6 sm:p-8 mt-8 flex flex-col items-center w-full max-w-md mx-4">
+    <div class="flex items-center space-x-4 mb-4">
+      <span id="main-timer" contenteditable="true" class="text-6xl sm:text-8xl font-mono text-white transition-colors duration-200 outline-none focus:ring-2 ring-blue-400 rounded px-2" aria-label="Edit Speech Timer" title="Click to edit time">5:00</span>
+    </div>
+    <div class="flex space-x-4 mt-4">
+      <button id="start-btn" class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-6 rounded">Start 1AC</button>
+      <button id="reset-btn" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-6 rounded">Reset</button>
+    </div>
+  </div>
+
   <!-- Prep Timer Section -->
   <div class="bg-gray-800 rounded-lg shadow-lg p-6 mt-8 flex flex-col items-center w-full max-w-md mx-4">
     <div class="flex items-center space-x-4 mb-4">
@@ -78,16 +87,6 @@
     <div class="flex space-x-4">
       <button id="start-prep-btn" class="bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-2 px-6 rounded">Start Prep</button>
       <button id="reset-prep-btn" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-6 rounded">Reset Prep</button>
-    </div>
-  </div>
-
-  <!-- Responsibilities Panel -->
-  <button id="responsibilities-toggle" class="fixed top-4 right-4 bg-blue-600 text-white px-4 py-2 rounded shadow z-50">Responsibilities</button>
-  <div id="responsibilities-panel" class="fixed top-0 right-0 w-full sm:w-80 h-full bg-gray-800 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
-    <div class="p-6 relative">
-      <button id="close-responsibilities" aria-label="Close Responsibilities Panel" class="absolute top-0 right-0 mt-2 mr-2 text-white text-xl font-bold focus:outline-none">&times;</button>
-      <h3 class="text-lg font-bold mb-4 mt-2">Responsibilities</h3>
-      <ul id="responsibilities-list" class="list-disc pl-5"></ul>
     </div>
   </div>
 
