--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
     </div>
   </div>
 
-  <!-- Speech Buttons -->
-  <div class="grid grid-cols-2 sm:grid-cols-4 gap-2 mt-8 w-full max-w-2xl px-4">
-    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AC">1AC</button>
-    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX1">CX1</button>
-    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NC">1NC</button>
-    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX2">CX2</button>
-    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AC">2AC</button>
-    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX3">CX3</button>
-    <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NC">2NC</button>
-    <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX4">CX4</button>
-    <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NR">1NR</button>
-    <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AR">1AR</button>
-    <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NR">2NR</button>
-    <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AR">2AR</button>
-  </div>
+<!-- Speech Buttons with tooltips -->
+<div class="grid grid-cols-2 sm:grid-cols-4 gap-2 mt-8 w-full max-w-2xl px-4">
+  <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AC" title="Start the 1st Affirmative Constructive">1AC</button>
+  <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX1" title="Start Cross-Examination after 1AC">CX1</button>
+  <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NC" title="Start the 1st Negative Constructive">1NC</button>
+  <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX2" title="Start Cross-Examination after 1NC">CX2</button>
+  <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AC" title="Start the 2nd Affirmative Constructive">2AC</button>
+  <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX3" title="Start Cross-Examination after 2AC">CX3</button>
+  <button class="speech-btn bg-blue-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NC" title="Start the 2nd Negative Constructive">2NC</button>
+  <button class="speech-btn bg-purple-500 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="CX4" title="Start Cross-Examination after 2NC">CX4</button>
+  <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1NR" title="Start the 1st Negative Rebuttal">1NR</button>
+  <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="1AR" title="Start the 1st Affirmative Rebuttal">1AR</button>
+  <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2NR" title="Start the 2nd Negative Rebuttal">2NR</button>
+  <button class="speech-btn bg-yellow-600 hover:bg-yellow-700 text-white py-2 rounded font-bold min-h-[48px] touch-manipulation" data-label="2AR" title="Start the 2nd Affirmative Rebuttal">2AR</button>
+</div>
 
   <!-- Main Timer Section -->
   <div id="speechTimerContainer" class="bg-gray-800 rounded-lg shadow-lg p-6 sm:p-8 mt-8 flex flex-col items-center w-full max-w-md mx-4">
