--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </div>
 
   <!-- Responsibilities Panel -->
-  <div id="responsibilities-panel" class="fixed top-0 right-0 w-1/2 h-full bg-gray-900 border-l border-gray-600 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
+  <div id="responsibilities-panel" class="fixed top-0 right-0 w-full sm:w-1/2 h-full bg-gray-900 border-l border-gray-600 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
     <div class="p-6 relative">
       <button id="close-responsibilities" aria-label="Close Responsibilities Panel" class="absolute top-0 right-0 mt-2 mr-2 text-white text-xl font-bold focus:outline-none">&times;</button>
       <h1 class="text-2xl font-bold mb-4 mt-2 text-cyan-400 flex items-center space-x-2">
